# backend/src/Routes/functRoutes.ts
@@ -2,6 +2,7 @@ import express from "express";
 import {
   getAllMembership,
   getAllPlans,
+  getAllStream,
   getRoleType,
 } from "../Controller/functController";
 
@@ -10,5 +11,6 @@ const router = express.Router();
 router.route("/getRoleType").get(getRoleType);
 router.route("/getAllPlans").get(getAllPlans);
 router.route("/getAllMembership").get(getAllMembership);
+router.route("/getAllStream").get(getAllStream);
 
 export default router;
